# KutsRPC

./: .gitignore  .taurignore  Cargo.toml  LICENSE  README.md  Trunk.toml  rustfmt.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: add_preset.rs  create_preset.rs  get_process_start_time.rs  load_config.rs  load_presets.rs  mod.rs  open_dialog.rs  process.rs  remove_preset.rs  update_config.rs
src-tauri/src/structs/: config.rs  mod.rs  preset.rs
ui/: Cargo.toml  index.html  input.css  tailwind.config.js
ui/src/: invoke.rs  main.rs
ui/src/components/: alert.rs  config_modal.rs  create_preset_modal.rs  error_modal.rs  header.rs  mod.rs  sidebar.rs  sidebaricon.rs  visualizer.rs
ui/src/components/main/: input.rs  mod.rs  timestamp_input.rs
ui/src/structs/: activity.rs  config.rs  mod.rs  preset.rs
ui/src/utils/: load.rs  mod.rs  time.rs
ui/style/: index.css  output.css
