[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.10", features = ["csr", "nightly"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = [
  "all",
] }