[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
chrono = "0.4.31"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = [
  "all",
] }
serde = { version = "1.0.*", features = ["derive"]}
serde_json = { version = "1.0.117" }
fancy-regex = "0.13.0"